# pi-pico-w-examples

./: .gitignore  README.md
pico_w_discord_button/: CMakeLists.txt  README.md  build.sh
pico_w_discord_button/include/: lwipopts.h
pico_w_discord_button/src/: main.cpp  tls.c
pico_w_discord_image/: CMakeLists.txt  LICENSES.md  README.md  im2base64.py
pico_w_discord_image/include/: lwipopts.h  mbedtls_config.h
pico_w_discord_image/src/: main.cpp  tls.c
